--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
     !-- your code here! See README.md for deliverables -->
 <video>
-  <source>
-  src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4
+  <source
+  src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4>
+  <source
+  src="
 </video>
 
 
