--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <source
   src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4>
   <source
-  src="
+  src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg>
 </video>
 
 
